--- a/index.html
+++ b/index.html
@@ -7,80 +7,93 @@
 
         <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
 
+        <link rel="stylesheet" href="style.css" />
+
         <title>Frontend Mentor | News homepage</title>
-        <link rel="stylesheet" href="assets/css/style.css" />
+
+        <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+        <style>
+            .attribution {
+                font-size: 16px;
+                text-align: center;
+                padding: 20px 0;
+            }
+            .attribution a {
+                color: hsl(228, 45%, 44%);
+            }
+        </style>
     </head>
-    <body id="home">
+    <body>
         <div class="container">
-            <nav>
-                <img src="assets/images/logo.svg" alt="" />
-                <div class="toggle">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <ul class="menu">
-                    <a href="#home"><li>Home</li></a>
-                    <a href="#new"><li>New</li></a>
-                    <a href="#popular"><li>Popular</li></a>
-                    <a href="#trending"><li>Trending</li></a>
-                    <a href=""><li>Categories</li></a>
-                </ul>
-            </nav>
-            <div class="hero">
-                <div id="popular" class="window">
-                    <img src="assets/images/image-web-3-desktop.jpg" alt="" />
-                </div>
-                <div class="title"><h1>The Bright Future of Web 3.0?</h1></div>
+            <header>
+                <nav class="navbar">
+                    <img src="assets/images/logo.svg" alt="logo" class="logo" />
+
+                    <div class="hamburger"><span></span><span></span><span></span></div>
+
+                    <ul class="list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">New</a></li>
+                        <li><a href="#">Popular</a></li>
+                        <li><a href="#">Trending</a></li>
+                        <li><a href="#">Categories</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section class="grid-container">
+                <img src="assets/images/image-web-3-mobile.jpg" alt="" />
+                <h1>The Bright Future of Web 3.0?</h1>
                 <div class="desc">
                     <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
-                    <a href="#">Read more</a>
+                    <button class="btn">Read more</button>
                 </div>
-                <div id="new" class="new">
-                    <h1>New</h1>
-                    <div class="news">
-                        <div class="hydro">
-                            <h4>Hydrogen VS Electric Cars</h4>
-                            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-                        </div>
-                        <div class="down">
-                            <h4>The Downsides of AI Artistry</h4>
-                            <p>adverse effects of on-demand AI image generation?</p>
-                        </div>
-                        <div>
-                            <h4>Is VC Funding Drying Up?</h4>
-                            <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-                        </div>
+                <div class="news">
+                    <h2>New</h2>
+                    <div class="news-item">
+                        <h3>Hydrogen VS Electric Cars</h3>
+                        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+                    </div>
+                    <div class="news-item">
+                        <h3>The Downsides of AI Artistry</h3>
+                        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+                    </div>
+                    <div class="news-item">
+                        <h3>Is VC Funding Drying Up?</h3>
+                        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
                     </div>
                 </div>
-                <div id="trending" class="trend">
-                    <div class="satu">
-                        <img src="assets/images/image-retro-pcs.jpg" alt="" />
-                        <div>
-                            <h1>01</h1>
-                            <h3>Reviving Retro PCs</h3>
-                            <p>What happens when old PCs are given modern upgrades?</p>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="card-item">
+                            <img src="assets/images/image-retro-pcs.jpg" alt="" />
+                            <div class="">
+                                <h1>01</h1>
+                                <h3>Reviving Retro PCs</h3>
+                                <p>What happens when old PCs are given modern upgrades?</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dua">
-                        <img src="assets/images/image-top-laptops.jpg" alt="" />
-                        <div>
-                            <h1>02</h1>
-                            <h3>Top 10 Laptops of 2022</h3>
-                            <p>Our best picks for various needs and budgets.</p>
+                        <div class="card-item">
+                            <img src="assets/images/image-top-laptops.jpg" alt="" />
+                            <div class="">
+                                <h1>02</h1>
+                                <h3>Top 10 Laptops of 2022</h3>
+                                <p>Our best picks for various needs and budgets.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="tiga">
-                        <img src="assets/images/image-gaming-growth.jpg" alt="" />
-                        <div>
-                            <h1>03</h1>
-                            <h3>The Growth of Gaming</h3>
-                            <p>How the pandemic has sparked fresh opportunities.</p>
+                        <div class="card-item">
+                            <img src="assets/images/image-gaming-growth.jpg" alt="" />
+                            <div class="">
+                                <h1>03</h1>
+                                <h3>The Growth of Gaming</h3>
+                                <p>How the pandemic has sparked fresh opportunities.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
+            <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">SkaSkaSka</a>.</div>
         </div>
-        <script src="assets/js/app.js"></script>
+
+        <script src="script.js"></script>
     </body>
 </html>
